--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
        <h1>World Clock</h1>
        <footer>This Project was coded by
-        <a href="#" target="_blank">Emmah Zanele Mpofu</a>
+        <a href="https://github.com/Zaemah/World-Clock" target="_blank">Emmah Zanele Mpofu</a>
        </footer>
     <script src="src/index.js"></script>
 </body>
