added basic html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
 </head>
 <body>
        <h1>World Clock</h1>
+       <select name="city" id="cities">
+        <option value="">select a city...</option>
+        <option value="">Warsaw</option>
+        <option value="">CapeTown</option>
+        <option value="">London</option>
+        <option value="">Paris</option>
+        <option value="">Canberra</option>
+    </select>
+    <div class="city">
+        <h2>Harare</h2>
+        <div class="date">November 8th, 2023</div>
+        <div class="time">2.45.23 AM</div>
+    </div>
+    <div class="city">
+        <h2>FrancisTown</h2>
+        <div class="date">November 8th, 2023</div>
+        <div class="time">2.45.23 AM</div>
+    </div>
+    <div class="city">
+        <h2>CapeTown</h2>
+        <div class="date">November 8th, 2023</div>
+        <div class="time">2.45.23 AM</div>
+    </div>
+    <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">November 8th, 2023</div>
+        <div class="time">2.45.23 AM</div>
+    </div>
        <footer>This Project was coded by
         <a href="https://github.com/Zaemah/World-Clock" target="_blank">Emmah Zanele Mpofu</a>
        </footer>
