--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="src/index.css"/>
 </head>
 <body>
+    <div class="container">
        <h1>World Clock</h1>
        <select name="city" id="cities">
         <option value="">select a city...</option>
@@ -19,25 +20,38 @@
         <option value="">Canberra</option>
     </select>
     <div class="city">
+        <div>
         <h2>Harare</h2>
         <div class="date">November 8th, 2023</div>
-        <div class="time">2.45.23 AM</div>
+        </div>
+        <div class="time">2.45.23
+            <small>AM</small></div>
     </div>
     <div class="city">
-        <h2>FrancisTown</h2>
+        <div>
+        <h2>Gaborone</h2>
         <div class="date">November 8th, 2023</div>
-        <div class="time">2.45.23 AM</div>
+        </div>
+        <div class="time">2.45.23
+            <small>AM</small></div>
     </div>
     <div class="city">
+        <div>
         <h2>CapeTown</h2>
         <div class="date">November 8th, 2023</div>
-        <div class="time">2.45.23 AM</div>
+        </div>
+        <div class="time">2.45.23 
+            <small>AM</small></div>
     </div>
     <div class="city">
+        <div>
         <h2>Sydney</h2>
         <div class="date">November 8th, 2023</div>
-        <div class="time">2.45.23 AM</div>
+        </div>
+        <div class="time">2.45.23 
+            <small>AM</small></div>
     </div>
+</div>
        <footer>This Project was coded by
         <a href="https://github.com/Zaemah/World-Clock" target="_blank">Emmah Zanele Mpofu</a>
        </footer>
