--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
        <h1>World Clock</h1>
        <select name="city" id="cities">
         <option value="">select a city...</option>
-        <option value="">Warsaw</option>
-        <option value="">CapeTown</option>
+        <option value="">New York</option>
+        <option value="">Dubai</option>
         <option value="">London</option>
         <option value="">Paris</option>
-        <option value="">Canberra</option>
+        <option value="">Sydney</option>
     </select>
-    <div class="city">
+    <div class="city" id="harare">
         <div>
         <h2>Harare</h2>
         <div class="date">November 8th, 2023</div>
@@ -27,25 +27,25 @@
         <div class="time">2.45.23
             <small>AM</small></div>
     </div>
-    <div class="city">
+    <div class="city" id="dubai">
         <div>
-        <h2>Gaborone</h2>
+        <h2>Dubai</h2>
         <div class="date">November 8th, 2023</div>
         </div>
         <div class="time">2.45.23
             <small>AM</small></div>
     </div>
-    <div class="city">
+    <div class="city" id="johhanesburg">
         <div>
-        <h2>CapeTown</h2>
+        <h2>Johannesburg</h2>
         <div class="date">November 8th, 2023</div>
         </div>
         <div class="time">2.45.23 
             <small>AM</small></div>
     </div>
-    <div class="city">
+    <div class="city" id="canberra">
         <div>
-        <h2>Sydney</h2>
+        <h2>Canberra</h2>
         <div class="date">November 8th, 2023</div>
         </div>
         <div class="time">2.45.23 
