--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>World Clock-Emmah-Zanele-Mpofu</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
-    <link rel="stylesheet" href="src/index.css"/>
+   <link rel="stylesheet" href="src/index.css"/>
 </head>
 <body>
     <div class="container">
@@ -35,9 +35,9 @@
         <div class="time">2.45.23
             <small>AM</small></div>
     </div>
-    <div class="city" id="johhanesburg">
+    <div class="city" id="dublin">
         <div>
-        <h2>Johannesburg</h2>
+        <h2>Dublin</h2>
         <div class="date">November 8th, 2023</div>
         </div>
         <div class="time">2.45.23 
