--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 <body>
     <div class="container">
        <h1>World Clock</h1>
-       <select name="city" id="cities">
+       <select name="cities" id="city">
         <option value="">select a city...</option>
-        <option value="">New York</option>
-        <option value="">Dubai</option>
-        <option value="">London</option>
-        <option value="">Paris</option>
-        <option value="">Sydney</option>
+        <option value="America/New_York">New York</option>
+        <option value="Africa/Gaborone">Gaborone</option>
+        <option value="Europe/London">London</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="Africa/Cairo">Cairo</option>
     </select>
+    
+    <div id="cities">
     <div class="city" id="harare">
         <div>
         <h2>Harare</h2>
@@ -27,7 +29,7 @@
         <div class="time">2.45.23
             <small>AM</small></div>
     </div>
-    <div class="city" id="dubai">
+     <div class="city" id="dubai">
         <div>
         <h2>Dubai</h2>
         <div class="date">November 8th, 2023</div>
@@ -51,6 +53,7 @@
         <div class="time">2.45.23 
             <small>AM</small></div>
     </div>
+</div>
 </div>
        <footer>This Project was coded by
         <a href="https://github.com/Zaemah/World-Clock" target="_blank">Emmah Zanele Mpofu</a>
