--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
        <h1>World Clock</h1>
        <select name="cities" id="city">
         <option value="">select a city...</option>
+        <option value="current">My Location</option>
         <option value="America/New_York">New York</option>
         <option value="Africa/Gaborone">Gaborone</option>
         <option value="Europe/London">London</option>
